<resources>
    <string name="app_name">Hotel Service TV Box</string>
    <string name="title_activity_welcome">Welcome Activity</string>
    <string name="total">TOTAL</string>
    <string name="roomid">ROOM</string>
    <string name="add">ORDER</string>
    <string name="finalize">FINALIZE</string>
    <string name="clear">CLEAR ORDER</string>
    <string name="comment">COMMENT</string>
    <string name="delivery_time">DELIVERY TIME</string>
    <string name="minutes"> MINUTES LATER</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="USD">VND</string>
    <string name="added">Added to Cart</string>
    <string name="attach">ATTACH</string>
    <string name="sent">Your mail be sending..</string>
    <string name="residual">Your residual vouchers is</string>
    <string name="cancelled">CANCELLED</string>
    <string name="attached">Attached Image</string>
    <string name="over">Can not order over 100!</string>
    <string name="search">SEARCH</string>
    <string name="prevent">Sorry. Voucher limited until you buy over 500 thousand dong.</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="room_order">ROOM ORDER</string>
    <string name="clickorder">CLICK TO ORDER</string>

    <!-- Dialog Notify-->
    <string name="confirm_service">Confirm Service</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm_clear">Confirm Clear</string>
    <string name="confirm_back">Confirm Back</string>
    <string name="confirm_cancel">Confirm Cancel</string>
    <string name="confirm_content">Are you sure?</string>
    <string name="confirm_question_do">Are you sure you want to perform this action?</string>
    <string name="confirm_request_wait">Please wait. We will serve you soon. Thank you!</string>
    <string name="confirm_order_accepted">Your order has been accepted. Thank you!</string>
    <string name="confirm_promotional">Your booking has been accepted. We will contact with you to confirm again. Thank you!</string>
    <string name="confirm_back_question">This action will clear all your cart. Are you sure you want to perform this action?</string>
    <string name="notitynull">There is no pending request!</string>
    <string name="notifyqty">Please choose quantity!</string>
    <string name="notifychoose">Please comment and check!</string>
    <string name="error"></string>

    <!-- WelcomeActivity -->
    <string name="dummy_eng">ENGLISH</string>
    <string name="dummy_viet">TIẾNG VIỆT</string>
    <string name="dummy_content">WELCOME TO OUR HOTEL</string>
    <string name="dummy_content2">XIN CHÀO QUÝ KHÁCH</string>
    <string name="information">INFORMATION</string>
    <string name="gallery">GALLERY</string>

    <!-- MainActivity -->
    <string name="application">APPLICATIONS</string>
    <string name="promotional">PROMOTIONAL CHANNEL</string>
    <string name="service">ROOM SERVICES</string>
    <string name="request_ticket">REQUEST TICKET</string>
    <string name="shopping">VIRTUAL SHOPPING</string>
    <string name="ecard">E-CARDS</string>
    <string name="survey">SURVEY</string>
    <string name="bill">BILLING</string>
    <string name="order">YOUR ORDER</string>
    <string name="pending">PENDING</string>
    <string name="recommend">RECOMMEND</string>
    <string name="tivistream">TIVI STREAMING</string>

    <!-- PromotionalChanelActivity -->
    <string name="spa">SPA</string>
    <string name="gym">GYM</string>
    <string name="pool">POOL</string>
    <string name="tennis">TENNIS COURT</string>
    <string name="golf">GOLF</string>
    <string name="worktime">Working hour:</string>
    <string name="capacity">Capacity:</string>
    <string name="description">Description:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!-- RoomServicesActivity -->
    <string name="food_drink">FOODS AND BEVERAGES</string>
    <string name="housekeeping">HOUSEKEEPING</string>
    <string name="maintenance">MAINTENANCE</string>
    <string name="front_desk">FRONT-DESK</string>

    <!-- HousekeepingActivity -->
    <string name="room_cleaning">ROOM CLEANING</string>
    <string name="laundry">LAUNDRY</string>
    <string name="bath_extras">BATH EXTRAS</string>
    <string name="bed_extras">BED EXTRAS</string>
    <string name="room_extras">ROOM EXTRAS</string>
    <string name="datetime">DATE/TIME</string>
    <string name="comment_hint">Please describe with as much detail as possible</string>

    <!-- MaintenanceActivity -->
    <string name="television">TELEVISION</string>
    <string name="air_condition">AIR CONDITIONER </string>
    <string name="refrigerator">REFRIGERATOR</string>

    <!-- EcardActivity -->
    <string name="send">SEND</string>
    <string name="yourname">YOUR NAME: </string>
    <string name="message">has given you a voucher in our hotel with discount 20%.</string>
    <string name="receiver">RECEIVER MAIL: </string>
    <string name="subject">SUBJECT: </string>
    <string name="validateMail">Please input Valid Email!</string>
    <string name="validName">Please input receiver name or nickname!</string>
    <string name="validImage">Please attach an image!</string>
    <string name="dear">Dear</string>
    <string name="input">Input Email</string>
    <string name="inputname">Input Receiver Name</string>

    <!-- MenuList -->
    <string name="food">FOODS</string>
    <string name="beverage">BEVERAGES</string>

    <string name="breakfast">BREAKFAST</string>
    <string name="lunch">LUNCH</string>
    <string name="dinner">DINNER</string>
    <string name="dessert">DESSERT</string>
    <string name="APPETIZERS">APPETIZERS</string>
    <string name="SEAFOODS">SEAFOODS</string>
    <string name="MAINCOURSE">MAIN COURSE</string>
    <string name="RICE">RICE</string>
    <string name="HOTPOT">HOT POT</string>
    <string name="VEGETARIAN">VEGETARIAN</string>
    <string name="SOUP">VEGETABLES - SOUP</string>

    <string name="coffee">COFFEE</string>
    <string name="fruit">FRUIT JUICE</string>
    <string name="wine">WINE</string>
    <string name="mojito">MOJITO</string>
    <string name="other_drinks">OTHER DRINKS</string>

    <string name="souvenir">SOUVENIR</string>
    <string name="personal">PERSONAL</string>

    <string name="decoration">DECORATION</string>
    <string name="keychain">KEYCHAIN</string>
    <string name="toy">TOY</string>

    <string name="houseware">HOUSEWARE</string>
    <string name="lighter">LIGHTER</string>
    <string name="tshirtf">T-SHIRT (F)</string>
    <string name="tshirtm">T-SHIRT (M)</string>
    <string name="coatf">COAT (F)</string>
    <string name="coatm">COAT (M)</string>
    <string name="trouserf">TROUSERS (F)</string>
    <string name="trouserm">TROUSERS (M)</string>
    <string name="underwearf">UNDERWEAR (F)</string>
    <string name="underwearm">UNDERWEAR (N)</string>

    <!-- Foods and Drinks -->
    <string-array name="food_header_titles">
        <item>@string/food</item>
        <item>@string/beverage</item>
    </string-array>

    <string-array name="food_h1_items">
        <item>@string/breakfast</item>
        <item>@string/lunch</item>
        <item>@string/dinner</item>
        <item>@string/dessert</item>
    </string-array>

    <string-array name="food_h2_items">
        <item>@string/coffee</item>
        <item>@string/fruit</item>
        <item>@string/wine</item>
        <item>@string/mojito</item>
    </string-array>

    <!-- Virtual Shopping -->
    <string-array name="shopping_header_titles">
        <item>@string/souvenir</item>
        <item>@string/personal</item>
    </string-array>

    <string-array name="shopping_h1_items">
        <item>@string/decoration</item>
        <item>@string/keychain</item>
        <item>@string/toy</item>
    </string-array>

    <string-array name="shopping_h2_items">
        <item>@string/houseware</item>
        <item>@string/lighter</item>
        <item>@string/tshirtf</item>
        <item>@string/tshirtm</item>
        <item>@string/coatf</item>
        <item>@string/coatm</item>
        <item>@string/trouserf</item>
        <item>@string/trouserm</item>
        <item>@string/underwearf</item>
        <item>@string/underwearm</item>
    </string-array>
    <string name="title_activity_foody">FoodyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- DATA -->
    <string name="spahour">9AM - 10PM</string>
    <string name="gymhour">8AM - 10PM</string>
    <string name="poolhour">6AM - 6PM</string>

    <string name="hobby">HOBBY</string>
    <string name="ocean">OCEAN</string>
    <string name="mountain">MOUNTAIN</string>
    <string name="countryside">COUNTRYSIDE</string>
    <string name="money">MONEY</string>
    <string name="title_activity_ecards">EcardsActivity</string>
    <string name="title_activity_recommend__new_">Recommend_New_Activity</string>
</resources>
