<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50797878"
        android:orientation="horizontal"
        android:id="@+id/layoutTime">

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.71"
            android:text="@string/delivery_time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.32" />

        <TextView
            android:id="@+id/tvMinutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.38"
            android:text="@string/minutes"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFinalizeOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finalize"
            android:background="@drawable/finalizestyles"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"/>

    </LinearLayout>

</LinearLayout>