<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="66dp"
    tools:context="demo.example.thanhldtse61575.hotelservicetvbox.OrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="450dp">

            <ListView
                android:id="@+id/orderListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="vertical" />

        </LinearLayout>

        <include layout="@layout/layout_billtotal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:background="@color/light_translucent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDeliveryTime"
                android:layout_height="wrap_content"
                android:text="@string/delivery_time"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:layout_weight="0.25"
                android:layout_width="130dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="0.15" />

            <TextView
                android:id="@+id/tvMinutes"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:layout_weight="0.46" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnFinalizeOrder"
                    android:layout_height="wrap_content"
                    android:text="@string/finalize"
                    android:layout_width="match_parent" />

                <Button
                    android:id="@+id/btnClearOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <include
            layout="@layout/layout_roombar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
