<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_promo_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="demo.example.thanhldtse61575.hotelservicetvbox.PromoDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="546dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnBack"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/previous"
                        android:textColor="@color/yellow"
                        android:textStyle="bold|italic" />

                    <com.google.android.youtube.player.YouTubePlayerView
                        android:id="@+id/videoView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:background="@color/white" />

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/next"
                        android:textColor="@color/yellow"
                        android:textStyle="bold|italic" />

                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:paddingLeft="64dp"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvPromoName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Name"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:text="@string/worktime"
                            android:textSize="@dimen/text_size_medium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:text="@string/capacity"
                            android:textSize="@dimen/text_size_medium"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="@dimen/text_size_medium"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_medium"
                            android:id="@+id/tvWorkHour"
                            android:textStyle="bold|italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_medium"
                            android:id="@+id/tvCapacity"
                            android:textStyle="bold|italic"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_medium"
                            android:id="@+id/tvDescription"
                            android:textStyle="bold|italic"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:src="@drawable/ic_bell"
                app:layout_anchor="@id/videoView"
                app:layout_anchorGravity="top|right|end"
                app:backgroundTint="@android:color/holo_green_dark" />
        </android.support.design.widget.CoordinatorLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <include
            layout="@layout/layout_roombar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
