<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    tools:context="demo.example.thanhldtse61575.hotelservicetvbox.WelcomeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"></LinearLayout>

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/dummy_content"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fullscreen_content2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:text="@string/dummy_content2"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@color/black_overlay"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dummy_btnEng2"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/dummy_eng"
                android:textSize="60dp" />

            <Button
                android:id="@+id/dummy_btnViet2"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="TIẾNG VIỆT"
                android:textSize="60dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"></LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="invisible">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:visibility="invisible">

            <Button
                android:id="@+id/dummy_btnEng"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_eng"
                android:textStyle="bold"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/dummy_btnViet"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TIẾNG VIỆT"
                android:textStyle="bold"
                android:visibility="invisible"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
