<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="demo.example.thanhldtse61575.hotelservicetvbox.EcardsActivity$PlaceholderFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="#66000000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <EditText
                android:id="@+id/txtMailRecv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Input email"
                android:inputType="textEmailAddress"
                android:textColor="@color/blue_sky"
                android:textColorHint="@color/gray_light"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="16dp"
                android:layout_height="16dp"></LinearLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyles"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"></LinearLayout>

                <LinearLayout
                    android:layout_width="600dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="#66000000"
                    android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="right"
                        android:text="@string/dear"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <EditText
                        android:id="@+id/txtRecvName"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:hint="John"
                        android:inputType="textPersonName"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/gray_light"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text=" , "
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold|italic" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvYourName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Le Doan Thien Thanh"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/message"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold|italic"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
